// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 1`] = `
<View
  onLayout={[Function]}
  style={undefined}
  testID="web-container.view"
/>
`;

exports[`render html 1`] = `
<View
  onLayout={[Function]}
  style={undefined}
  testID="web-container.view"
>
  <WebView
    contentInset={undefined}
    onMessage={[Function]}
    onShouldStartLoadWithRequest={[Function]}
    scrollEnabled={true}
    source={
      Object {
        "baseUrl": "http://mobiledev.instructure.com",
        "html": "
      <html>
          <head>
              <meta name=\\"viewport\\" content=\\"width=300,
                  initial-scale = 1.0, user-scalable = no\\" />
              <style>
                  body {
                      font: -apple-system-body;
                      margin: 0;
                      padding: 0;
                      color: black;
                      background-color: white;
                  }
                  img {
                      width: auto;
                      height: auto;
                      max-width: 100%;
                  }
                  video {
                      width: auto;
                      height: auto;
                      max-width: 100%;
                  }
                  #whizzy_content {
                      padding: 0;
                      margin: 0;
                  }
                  iframe {
                    border: none;
                    width: 100% !important;
                  }
              </style>
          </head>
      <body>
          <div id='whizzy_content'>
          <div>hello world</div>
          </div>
          <script type=\\"text/javascript\\">
          window.onload = function () {
              let interval = setInterval(function () {
                  if (window.originalPostMessage) {
                      let height = document.getElementById('whizzy_content').clientHeight;
                      postMessage(JSON.stringify({type: 'UPDATE_HEIGHT', data: height }));
                      clearInterval(interval)
                  }
              }, 100)
          }
          </script>
      </body>
      </html>
      ",
      }
    }
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0)",
        "height": 1,
      }
    }
  />
</View>
`;

exports[`render with width zero 1`] = `
<View
  onLayout={[Function]}
  style={undefined}
  testID="web-container.view"
/>
`;

exports[`updates height from js 1`] = `
<View
  onLayout={[Function]}
  style={undefined}
  testID="web-container.view"
>
  <WebView
    contentInset={undefined}
    onMessage={[Function]}
    onShouldStartLoadWithRequest={[Function]}
    scrollEnabled={true}
    source={
      Object {
        "baseUrl": "http://mobiledev.instructure.com",
        "html": "
      <html>
          <head>
              <meta name=\\"viewport\\" content=\\"width=300,
                  initial-scale = 1.0, user-scalable = no\\" />
              <style>
                  body {
                      font: -apple-system-body;
                      margin: 0;
                      padding: 0;
                      color: black;
                      background-color: white;
                  }
                  img {
                      width: auto;
                      height: auto;
                      max-width: 100%;
                  }
                  video {
                      width: auto;
                      height: auto;
                      max-width: 100%;
                  }
                  #whizzy_content {
                      padding: 0;
                      margin: 0;
                  }
                  iframe {
                    border: none;
                    width: 100% !important;
                  }
              </style>
          </head>
      <body>
          <div id='whizzy_content'>
          <div>hello world</div>
          </div>
          <script type=\\"text/javascript\\">
          window.onload = function () {
              let interval = setInterval(function () {
                  if (window.originalPostMessage) {
                      let height = document.getElementById('whizzy_content').clientHeight;
                      postMessage(JSON.stringify({type: 'UPDATE_HEIGHT', data: height }));
                      clearInterval(interval)
                  }
              }, 100)
          }
          </script>
      </body>
      </html>
      ",
      }
    }
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0)",
        "height": 10,
      }
    }
  />
</View>
`;

exports[`updates height from js with scroll disabled 1`] = `
<View
  onLayout={[Function]}
  style={undefined}
  testID="web-container.view"
>
  <WebView
    contentInset={undefined}
    onMessage={[Function]}
    onShouldStartLoadWithRequest={[Function]}
    scrollEnabled={false}
    source={
      Object {
        "baseUrl": "http://mobiledev.instructure.com",
        "html": "
      <html>
          <head>
              <meta name=\\"viewport\\" content=\\"width=300,
                  initial-scale = 1.0, user-scalable = no\\" />
              <style>
                  body {
                      font: -apple-system-body;
                      margin: 0;
                      padding: 0;
                      color: black;
                      background-color: white;
                  }
                  img {
                      width: auto;
                      height: auto;
                      max-width: 100%;
                  }
                  video {
                      width: auto;
                      height: auto;
                      max-width: 100%;
                  }
                  #whizzy_content {
                      padding: 0;
                      margin: 0;
                  }
                  iframe {
                    border: none;
                    width: 100% !important;
                  }
              </style>
          </head>
      <body>
          <div id='whizzy_content'>
          <div>hello world</div>
          </div>
          <script type=\\"text/javascript\\">
          window.onload = function () {
              let interval = setInterval(function () {
                  if (window.originalPostMessage) {
                      let height = document.getElementById('whizzy_content').clientHeight;
                      postMessage(JSON.stringify({type: 'UPDATE_HEIGHT', data: height }));
                      clearInterval(interval)
                  }
              }, 100)
          }
          </script>
      </body>
      </html>
      ",
      }
    }
    style={
      Object {
        "backgroundColor": "rgba(0, 0, 0, 0)",
        "height": 10,
      }
    }
  />
</View>
`;
